--- a/src/Components/Sidebar/Sidebar.module.css
+++ b/src/Components/Sidebar/Sidebar.module.css
@@ -5,7 +5,6 @@
   align-items: center;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%;
 }
 .sidebar_wrapper {
   display: flex;
@@ -13,10 +12,10 @@
   align-items: center;
   cursor: pointer;
   width: 288px;
-  height: 52px;
+  height: 56px;
   border-radius: 12px;
   padding: 8px 0px 8px 20px;
-  gap: 10px;
+  gap: 16px;
 }
 .sidebar_active_wrapper {
   background: rgba(53, 35, 195, 0.1);
@@ -25,10 +24,10 @@
   align-items: center;
   cursor: pointer;
   width: 288px;
-  height: 52px;
+  height: 56px;
   border-radius: 12px;
   padding: 8px 0px 8px 20px;
-  gap: 10px;
+  gap: 16px;
   position: relative;
 }
 .activeline {
@@ -60,5 +59,5 @@
 }
 
 .support_container {
-  margin-top: 70px;
+  margin-bottom: 20px;
 }
